[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameplay/gui/streak_counter/streak_counter.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/main/main.gd" type="Script" id=3]
[ext_resource path="res://gameplay/poop_spawn/poop_spawn.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/gui/game_over/game_over.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/gui/dump_bar/dump_bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://gameplay/gui/timer/timer.tscn" type="PackedScene" id=7]

[node name="main" type="Node2D"]
script = ExtResource( 3 )

[node name="poop_spawn" parent="." instance=ExtResource( 4 )]
position = Vector2( -164.258, -136 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="game_over" parent="GUI" instance=ExtResource( 5 )]
visible = false

[node name="dump_bar" parent="GUI" instance=ExtResource( 6 )]

[node name="timer" parent="GUI" instance=ExtResource( 7 )]

[node name="streak_counter" parent="GUI" instance=ExtResource( 1 )]

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 58, 375 )

[connection signal="restart_game" from="GUI/game_over" to="." method="_on_game_over_restart_game"]
[connection signal="dump_bar_full" from="GUI/dump_bar" to="." method="_on_dump_bar_dump_bar_full"]
[connection signal="food_streak_changed" from="player" to="GUI/streak_counter" method="_on_player_food_streak_changed"]
[connection signal="player_out_of_screen" from="player" to="." method="_on_player_player_out_of_screen"]
